Fixed error with color picker

--- a/less/style.less
+++ b/less/style.less
@@ -1,4 +1,3 @@
-@import 'normalize';
 @import 'colorpicker';
 @import 'colors';
 
@@ -40,7 +39,7 @@ section {
 
 #ColorPicker {
   left: 820px;
-  top: 720px;
+  top: 705px;
 }
 
 figure {
@@ -53,7 +52,7 @@ figure {
   border-radius: 6px;
   height: 100px;
   list-style: none;
-  margin: 0;
+//  margin: 0;
   padding: 0;
   overflow: hidden;
   width: 100%;
