Fixed it this time (hopefully)

--- a/less/style.less
+++ b/less/style.less
@@ -2,13 +2,14 @@
 @import 'colors';
 
 nav {
+  background: #777;
+  display: block;
   min-width: 960px;
   padding: 6px 0;
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 101;
-  background: #777;
+  z-index: 110;
   ul {
     list-style: none;
     margin: 0 auto;
@@ -44,7 +45,7 @@ section {
 
 figure {
   float: left;
-  margin: 0 1.6%;
+  margin: 0 1.6% 40px;
   width: 30%;
 }
 
