--- a/less/style.less
+++ b/less/style.less
@@ -47,6 +47,9 @@ figure {
   float: left;
   margin: 0 1.6% 40px;
   width: 30%;
+  figcaption {display: inline-block;}
+  form, input {display: inline;}
+  &.no-params figcaption {margin-bottom: 6px;}
 }
 
 .scheme {
