Added 'Source Code Pro' for <code>

--- a/less/style.less
+++ b/less/style.less
@@ -54,6 +54,7 @@ figure {
 }
 
 code {
+  font-family: 'Source Code Pro', monospace;
   &.block {
     background-color: #393939;
     border-radius: 8px;
